Fixed header too small on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@ html {
 header {
 	position: relative;
 	// height: 620px;
-	min-height: 100px;
+	min-height: 500px;
 	width: 100%;
 	background-size: cover;
 	-webkit-background-size: cover;
